# depscan

./: .gitignore  Makefile  pyproject.toml  requirements.txt
depscan/: main.py
tests/: test_depscan.py
