[tool.poetry]
name = "depscan"
version = "0.1.0"
description = "Dependencies scanner"
authors = ["Vitali Andrushkevich <andrushkevich.vitaliy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
